--- a/client/package.json
+++ b/client/package.json
@@ -24,5 +24,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "axios": "^1.13.5",
+    "react-router-dom": "^7.13.1"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
