--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
-    "mysql2": "^3.18.2"
+    "jsonwebtoken": "^9.0.3",
+    "mysql2": "^3.18.2",
+    "request-ip": "^3.3.0",
+    "ua-parser-js": "^2.0.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.14"
