--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.13.1"
   },
   "devDependencies": {
